--- a/examples/demo_json_storage/hardpy.toml
+++ b/examples/demo_json_storage/hardpy.toml
@@ -7,6 +7,7 @@ tests_name = "Device Test Suite"
 [database]
 # Storage type: "json"
 storage_type = "json"
+storage_path = "result"
 
 # CouchDB settings (only needed if storage_type = "couchdb")
 # user = "dev"
